--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Clerky</h1>
+    <header class="site-header header">
+        <div class="container header__wrapper">
+            <a href="./index.html" class="header__logo">
+                <img src="./assets/icons/logo.svg" alt="">
+            </a>
+
+            <div class="header__actions">
+                <a href="" class="header__login">Log In</a>
+                <a href="" class="header__phone">844-332-6440</a>
+                <a href="" class="header__started">Get Started</a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
