--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <header class="site-header header">
         <div class="container header__wrapper">
-            <a href="./index.html" class="header__logo">
+            <a href="./index.html" 
+            class="header__logo">
                 <img src="./assets/icons/logo.svg" alt="">
+
             </a>
 
             <div class="header__actions">
@@ -20,5 +22,20 @@
             </div>
         </div>
     </header>
+     <header class="site-header header">
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container hero__wrapper">
+                <div class="hero__content">
+                    <h1 class="hero__title">Running the show has
+                        never been so easy.</h1>
+                    <p class="hero__desc">Ready to put the human
+                         back in HR? Clerksy helps you set the stage
+                        with an inclusive and compliant workplace.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
